--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -365,7 +365,7 @@ service qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
 
 on property:sys.boot_completed=1
     start qcom-post-boot
-    swapon_all /vendor/etc/fstab.qcom
+    swapon_all /vendor/etc/fstab.zram
     write /proc/sys/vm/swappiness 100
 
 service charger /system/bin/charger
